# FaceRecon-Module

./: .gitignore  LICENSE  README.md  __init__.py  config.py  dataset.py  detector.py  example.py  pyproject.toml  requirements.txt  trainer.py
facerecog/: __init__.py  dataset.py  labels.py  users.py
